tests/type-errors/iterable_big_map_invalid_put.arl
archetype iterable_big_map_invalid_put

variable my_map  : iterable_big_map<string, bytes> = [ ("mystr0", 0x00) ; ("mystr1", 0x01) ; ("mystr2", 0x02) ; ("mystr3", 0x03) ]
variable my_map2 : iterable_big_map<string, bytes> = [ ]

entry exec () {
  my_map2 := put(my_map, "mystr4", 0x04)
}
